--- a/NodeSendServer/package.json
+++ b/NodeSendServer/package.json
@@ -10,7 +10,9 @@
   "author": "Juan Esteban Mejia Ortiz",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.15"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
